# query

./: CLAUDE.md  Cargo.toml  PLAN.md  Readme.md  TASK.md  TODO.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/datalog-ast/: Cargo.toml
crates/datalog-builtins/: Cargo.toml
crates/datalog-builtins/src/: builtins.rs  lib.rs
crates/datalog-core/: Cargo.toml
crates/datalog-core/src/: constants.rs  database.rs  lib.rs  unification.rs
crates/datalog-eval/: Cargo.toml
crates/datalog-eval/src/: builtins.rs  datalog_context.rs  datalog_unification.rs  delta_tracker.rs  evaluation.rs  grounding.rs  lib.rs  query.rs
crates/datalog-grounding/: Cargo.toml
crates/datalog-grounding/src/: grounding.rs  lib.rs
crates/datalog-parser/: Cargo.toml
crates/datalog-parser/src/: ast.rs  lib.rs  parser.rs  span.rs  src.rs  token.rs
crates/datalog-planner/: Cargo.toml
crates/datalog-planner/src/: builtins.rs  convert.rs  grounding.rs  ir.rs  lib.rs  safety.rs  stratification.rs
crates/datalog-safety/: Cargo.toml
crates/datalog-safety/src/: lib.rs  safety.rs  stratification.rs
crates/db/: Cargo.toml
crates/db/src/: io.rs  lib.rs
crates/json-value/: Cargo.toml
crates/json-value/src/: lib.rs
crates/logical/: Cargo.toml
crates/logical/src/: datalog_context.rs  lib.rs  operations.rs  runtime.rs
crates/query/: Cargo.toml
crates/query-repl/: Cargo.toml
crates/query-repl/src/: main.rs
crates/query/src/: lib.rs
crates/sql-engine/: Cargo.toml
crates/sql-engine/src/: datalog.rs  executor.rs  io.rs  lib.rs  runtime.rs
crates/sql-lexer/: Cargo.toml
crates/sql-lexer/src/: lexer.rs  lib.rs  token.rs
crates/sql-parser/: Cargo.toml
crates/sql-parser/src/: ast.rs  lib.rs  parser.rs
crates/sql-parser/src/lexer/: lex.rs  mod.rs  span.rs  token.rs
crates/sql-planner/: Cargo.toml
crates/sql-planner/src/: convert.rs  datalog.rs  ir.rs  lib.rs  plan.rs  planner.rs
crates/sql-storage/: Cargo.toml
crates/sql-storage/src/: datalog_constants.rs  datalog_context.rs  datalog_database.rs  datalog_unification.rs  delta_tracker.rs  engine.rs  io_types.rs  lib.rs  memory.rs  value.rs
crates/sql-tests/: Cargo.toml
crates/sql-tests/proptest-regressions/: proptest_queries.txt
crates/sql-tests/src/: lib.rs  proptest_queries.rs  simulation.rs  sql_compliance.rs  sql_datalog_integration.rs  trigger_tests.rs
crates/sql-wal/: Cargo.toml
crates/sql-wal/src/: lib.rs  wal.rs
crates/storage/: Cargo.toml
crates/storage/src/: datalog_constants.rs  engine.rs  lib.rs  memory.rs  metadata.rs
examples/: transitive_closure.qry
