[workspace]
resolver = "2"
members = [
    # Core types
    "crates/json-value",
    # SQL frontend
    "crates/sql-parser",
    "crates/sql-planner",
    "crates/sql-storage",
    "crates/sql-wal",
    "crates/sql-engine",
    "crates/sql-tests",
    # Datalog frontend
    "crates/datalog-parser",
    "crates/datalog-builtins",
    "crates/datalog-safety",
    "crates/datalog-grounding",
    "crates/datalog-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SQL-RS Contributors"]
license = "MIT"

[workspace.dependencies]
# Parsing
chumsky = "0.9"
ariadne = "0.4"
internment = "0.8"

# Core types
json-value = { path = "crates/json-value" }

# SQL crates
sql-parser = { path = "crates/sql-parser" }
sql-planner = { path = "crates/sql-planner" }
sql-storage = { path = "crates/sql-storage" }
sql-wal = { path = "crates/sql-wal" }
sql-engine = { path = "crates/sql-engine" }

# Datalog crates
datalog-parser = { path = "crates/datalog-parser" }
datalog-builtins = { path = "crates/datalog-builtins" }
datalog-safety = { path = "crates/datalog-safety" }
datalog-grounding = { path = "crates/datalog-grounding" }
datalog-eval = { path = "crates/datalog-eval" }

# Testing
proptest = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
