[workspace]
resolver = "2"
members = [
    # Core types
    "crates/json-value",
    # SQL frontend
    "crates/sql-parser",
    "crates/sql-planner",
    "crates/sql-storage",
    "crates/sql-engine",
    # Top-level database crate
    "crates/db",
    "crates/sql-tests",
    # Datalog frontend
    "crates/datalog-parser",
    "crates/datalog-planner",
    "crates/datalog-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SQL-RS Contributors"]
license = "MIT"

[workspace.dependencies]
# Parsing
chumsky = "0.9"
ariadne = "0.4"
internment = "0.8"

# Core types
json-value = { path = "crates/json-value" }

# SQL crates
sql-parser = { path = "crates/sql-parser" }
sql-planner = { path = "crates/sql-planner" }
sql-storage = { path = "crates/sql-storage" }
sql-engine = { path = "crates/sql-engine" }

# Top-level crate
db = { path = "crates/db" }

# Datalog crates
datalog-parser = { path = "crates/datalog-parser" }
datalog-planner = { path = "crates/datalog-planner" }
datalog-eval = { path = "crates/datalog-eval" }

# Testing
proptest = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
