[workspace]
resolver = "2"
members = [
    # Core types
    "crates/json-value",
    # Storage layer
    "crates/storage",
    "crates/logical",
    # SQL frontend
    "crates/sql-parser",
    "crates/sql-planner",
    "crates/sql-engine",
    # Datalog frontend
    "crates/datalog-parser",
    "crates/datalog-planner",
    "crates/datalog-eval",
    # Top-level query engine crate
    "crates/query",
    "crates/query-repl",
    "crates/sql-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["theknarf"]
license = "MIT"

[workspace.dependencies]
# Parsing
chumsky = "0.9"
ariadne = "0.4"
internment = "0.8"

# Core types
json-value = { path = "crates/json-value" }

# Storage layer
storage = { path = "crates/storage" }
logical = { path = "crates/logical" }

# SQL crates
sql-parser = { path = "crates/sql-parser" }
sql-planner = { path = "crates/sql-planner" }
sql-engine = { path = "crates/sql-engine" }

# Top-level crate
query = { path = "crates/query" }

# Datalog crates
datalog-parser = { path = "crates/datalog-parser" }
datalog-planner = { path = "crates/datalog-planner" }
datalog-eval = { path = "crates/datalog-eval" }

# Testing
proptest = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
