[package]
name = "datalog-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
datalog-parser = { path = "../datalog-parser" }
datalog-builtins = { path = "../datalog-builtins" }
datalog-core = { path = "../datalog-core" }
datalog-grounding = { path = "../datalog-grounding" }
datalog-safety = { path = "../datalog-safety" }

[dev-dependencies]
internment = "0.8"
