[package]
name = "datalog-grounding"
version = "0.1.0"
edition = "2021"

[dependencies]
datalog-parser = { path = "../datalog-parser" }
datalog-builtins = { path = "../datalog-builtins" }
datalog-core = { path = "../datalog-core" }

[dev-dependencies]
datalog-core = { path = "../datalog-core", features = ["test-utils"] }
internment = "0.8"
