[package]
name = "datalog-grounding"
version = "0.1.0"
edition = "2021"

[dependencies]
datalog-parser = { path = "../datalog-parser" }
datalog-builtins = { path = "../datalog-builtins" }
sql-storage = { path = "../sql-storage" }

[dev-dependencies]
sql-storage = { path = "../sql-storage", features = ["test-utils"] }
internment = "0.8"
