[package]
name = "sql-engine"
version.workspace = true
edition.workspace = true

[dependencies]
sql-parser = { workspace = true }
sql-planner = { workspace = true }
sql-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Datalog support
datalog-parser = { path = "../datalog-parser" }
datalog-planner = { path = "../datalog-planner" }
datalog-eval = { path = "../datalog-eval" }
internment = "0.8"

[dev-dependencies]
proptest = { workspace = true }
