[package]
name = "sql-planner"
version.workspace = true
edition.workspace = true

[dependencies]
sql-parser = { workspace = true }
datalog-parser = { workspace = true }
datalog-planner = { path = "../datalog-planner" }

[dev-dependencies]
proptest = { workspace = true }
internment = { workspace = true }
