[package]
name = "sql-storage"
version.workspace = true
edition.workspace = true

[features]
test-utils = []

[dependencies]
serde = { workspace = true }
datalog-parser = { workspace = true }
json-value = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
internment = { workspace = true }
