[package]
name = "sql-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sql-engine = { workspace = true }
sql-parser = { workspace = true }
sql-storage = { workspace = true }
sql-wal = { workspace = true }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
rand = "0.8"
