[package]
name = "sql-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
db = { path = "../db" }
sql-parser = { workspace = true }
logical = { workspace = true }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
rand = "0.8"
